--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <ul>
-            <li>Vagrant</li>
+            <li>Vagrant: Gerenciando maquinas virtuales</li>
             <li>Docker: Como hacer containers sin romperse la cabeza</li>
             <li>Ansible</li>
             <li>Integración continua: Madurez y productividad en el desarrollo de software</li>
