--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li>Vagrant: Gerenciando maquinas virtuales</li>
             <li>Docker: Como hacer containers sin romperse la cabeza</li>
-            <li>Ansible</li>
+            <li>Ansible: Su infraestructura como cogigo</li>
             <li>Integración continua: Madurez y productividad en el desarrollo de software</li>
             <li>Kubernetes: Introduccion a la orquestacion de containers</li>
         </ul>
